# LLVP

./: .gitignore  README.md
.github/workflows/: android.yml  lib-android-build.yml  lib-debug-build.yml  lib-ios-build-debug.yml  lib-ios-build.yml  lib-ios-debug.yml  sample-android-build.yml  sample-ios-build.yml
android/app/src/main/java/com/example/myapp/: MainActivity.java
lib/: .gitignore  CMakeLists.txt  build.sh  ios.toolchain.cmake  test_version.cpp  version.h
sample/android/: settings.gradle.kts
sample/android/app/: build.gradle.kts
sample/android/app/src/androidTest/java/com/example/llvp/: ExampleInstrumentedTest.kt
sample/android/app/src/main/: AndroidManifest.xml
sample/android/app/src/main/cpp/: CMakeLists.txt  llvp_jni.cpp
sample/android/app/src/main/java/com/example/llvp/: LlvpNative.kt  MainActivity.kt
sample/android/app/src/main/res/values/: strings.xml  themes.xml
sample/android/gradle/wrapper/: gradle-wrapper.properties
sample/ios/llvp/: ContentView.swift
sample/ios/llvp.xcodeproj/: project.pbxproj
sample/ios/llvp.xcodeproj/project.xcworkspace/xcuserdata/hassanahmad.xcuserdatad/: UserInterfaceState.xcuserstate
sample/ios/llvp.xcodeproj/xcuserdata/hassanahmad.xcuserdatad/xcschemes/: xcschememanagement.plist
sample/ios/llvp/llvp/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
sample/ios/llvp/llvp.xcodeproj/: project.pbxproj
sample/ios/llvp/llvp.xcodeproj/project.xcworkspace/xcuserdata/hassanahmad.xcuserdatad/: UserInterfaceState.xcuserstate
sample/llvp/llvp/: llvpApp.swift
sample/llvp/llvp.xcodeproj/: project.pbxproj
(+5 files in other folders)
